--- a/data-format-wad.cabal
+++ b/data-format-wad.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3cd4c2844a2741e50532d174a91c1dfcf915c341ac4f041e0df7109624b1b969
+-- hash: 24f7264c41c40d6b7238edbc3f90a473cc3d6d52bb3ff68c64fcf7683ede1b2d
 
 name:           data-format-wad
 version:        0.0.0.1
@@ -39,7 +39,10 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring >=0.10.10.0 && <=0.11.0.0
+    , data-format-udmf
+    , prettyprinter >=1.7.0 && <=1.8.0
     , relude >=0.7.0 && <=0.8.0
+    , tasty >=1.2.3 && <=1.3.0
   default-language: Haskell2010
 
 executable wad-exe
@@ -52,8 +55,11 @@ executable wad-exe
   ghc-options: -Wall -O -fwarn-unused-imports -fhide-source-paths -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wpartial-fields -fwrite-ide-info -hiedir=.hie -Wmissing-deriving-strategies -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , data-format-udmf
     , data-format-wad
+    , prettyprinter >=1.7.0 && <=1.8.0
     , relude >=0.7.0 && <=0.8.0
+    , tasty >=1.2.3 && <=1.3.0
   default-language: Haskell2010
 
 test-suite wad-test
@@ -67,6 +73,9 @@ test-suite wad-test
   ghc-options: -Wall -O -fwarn-unused-imports -fhide-source-paths -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Wpartial-fields -fwrite-ide-info -hiedir=.hie -Wmissing-deriving-strategies -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , data-format-udmf
     , data-format-wad
+    , prettyprinter >=1.7.0 && <=1.8.0
     , relude >=0.7.0 && <=0.8.0
+    , tasty >=1.2.3 && <=1.3.0
   default-language: Haskell2010
