--- a/package.yaml
+++ b/package.yaml
@@ -96,7 +96,7 @@ library:
     - bytestring >= 0.10.10.0 && <= 0.11.0.0
 
 tests:
-  wad-test:
+  data-format-wad-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
